tests/miniJava/neg/006152_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { return if ( 0 ) { } else { } } }
